k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modernbank-ingress
  namespace: modernbank
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /modernbank/account
        pathType: Prefix
        backend:
          service:
            name: modernbank-account
            port:
              number: 8081
      - path: /modernbank/b2bt
        pathType: Prefix
        backend:
          service:
            name: modernbank-b2bt
            port:
              number: 8082
      - path: /modernbank/customer
        pathType: Prefix
        backend:
          service:
            name: modernbank-customer
            port:
              number: 8083
      - path: /modernbank/cqrs
        pathType: Prefix
        backend:
          service:
            name: modernbank-cqrs
            port:
              number: 8084
      - path: /modernbank/transfer
        pathType: Prefix
        backend:
          service:
            name: modernbank-transfer
            port:
              number: 8085
      - path: /modernbank/product
        pathType: Prefix
        backend:
          service:
            name: modernbank-product
            port:
              number: 8086
      - path: /modernbank/user
        pathType: Prefix
        backend:
          service:
            name: modernbank-user
            port:
              number: 8091
      - path: /
        pathType: Prefix
        backend:
          service:
            name: modernbank
            port:
              number: 8080
